--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettify": "npx prettier . --write"
+    "prettify": "npx prettier . --write",
+    "lint": "npm run prettify && eslint src/**/*.ts* --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +44,9 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.2.4"
   }
 }
